# qubership-git-system-follower

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  README.md  cla.md  devbox.json  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini  versions.json
.github/: super-linter.env
.github/workflows/: checks.yaml  packaging.yaml  pr-assigner.yml  pr-conventional-commits.yaml  super-linter.yaml
.qubership/: grand-report.json
devbox/: docker-compose.yml
docs/: home.md  index.md
docs/ADRs/: ADR-0001-storing-gear-in-repo-as-text.md  index.md
docs/api_reference/: index.md
docs/api_reference/develop_interface/: index.md  templates.md  types.md  webhooks.md
docs/cli_reference/: download.md  install.md  uninstall.md
docs/concepts/: gear_dependency.md  gears.md  plugins.md  state.md
docs/concepts/internals/: gear-lifecycle.md  index.md
docs/concepts/plugins/: cli_arguments.md
docs/getting_started/: installation.md
docs/how_to/: build.md  gear_development_cases.md
docs/topics/: index.md
docs/topics/gears/: index.md  version.md
docs/topics/integrations/: git_providers.md  registries.md
git_system_follower/: cli.py  download.py  errors.py  install.py  states.py  uninstall.py
git_system_follower/develop/api/: cicd_variables.py  templates.py  types.py  webhooks.py
git_system_follower/git_api/: git_api.py  gitlab_api.py  utils.py
git_system_follower/package/: default.py  deleter.py  initer.py  package_info.py  rollbacker.py  script.py  templates.py  updater.py  webhooks.py
git_system_follower/plugins/: __init__.py  managers.py
git_system_follower/typings/: cli.py  package.py  registry.py  script.py
git_system_follower/utils/: cli.py  output.py  utility.py  version_comparer.py
tests/: config.py
tests/cassettes/: gitlab_project.yaml  states.yaml  test_complex_variable_A.yaml  test_complex_variable_B.yaml  test_complex_variable_C.yaml  test_complex_variable_D.yaml  test_create_variable.yaml  test_get_package_sources.yaml  test_install_uninstall.yaml  test_migrate_gear_type.yaml  test_package.yaml  test_simple_variable_A.yaml  test_simple_variable_B.yaml  test_simple_variable_C.yaml  test_simple_variable_D.yaml  test_webhooks.yaml
tests/functional/: common.py  test_complex_variable.py  test_install_uninstall.py  test_migrate_gear_type.py  test_rollback.py  test_simple_variable.py
tests/unit/: test_cicd_variable.py  test_download.py  test_gear_type.py  test_package.py  test_resolve_image.py  test_version_comparer.py  test_webhooks.py
v0.5.2/cli_reference/uninstall/: index.html
v0.5.2/getting_started/installation/: index.html
v0.5.2/search/: search_index.json
v0.5.3/cli_reference/list/: index.html
v0.5.3/concepts/api_version_list/: index.html
v0.5.3/getting_started/installation/: index.html
v0.5.3/how_to/gear_development_cases/: index.html
v0.5.3/search/: search_index.json
v0.5.4/: index.html
v0.5.4/concepts/plugins/: index.html
v0.5.4/search/: search_index.json
v0.5.5/api_reference/develop_interface/: index.html
v0.5.5/concepts/: index.html
v0.5.5/concepts/gears/: index.html
v0.5.5/concepts/state/: index.html
v0.5.5/getting_started/installation/: index.html
v0.5.6/api_reference/: index.html
v0.5.6/cli_reference/version/: index.html
v0.5.6/home/: index.html
v0.5.6/how_to/: index.html
v0.5.6/how_to/integration_with_semantic_release/: index.html
v0.5.7/: 404.html
v0.5.7/cli_reference/download/: index.html
v0.5.7/getting_started/quickstart/: index.html
v0.6.0/cli_reference/: index.html
v0.6.0/cli_reference/install/: index.html
v0.6.0/concepts/gears/: index.html
v0.6.0/getting_started/: index.html
v0.6.0/getting_started/installation/: index.html
v0.6.0/search/: search_index.json
v0.6.1/cli_reference/: index.html
v0.6.1/concepts/api_version_list/: index.html
v0.6.1/how_to/: index.html
v0.6.10/concepts/version/: index.html
v0.6.11/cli_reference/: index.html
v0.6.11/concepts/plugins/: index.html
v0.6.11/how_to/gear_development_cases/: index.html
v0.6.11/search/: search_index.json
v0.6.12/api_reference/: index.html
v0.6.12/cli_reference/install/: index.html
v0.6.12/concepts/: index.html
v0.6.12/search/: search_index.json
v0.6.13/: 404.html
v0.6.13/cli_reference/install/: index.html
v0.6.13/cli_reference/version/: index.html
v0.6.13/search/: search_index.json
v0.6.14/cli_reference/download/: index.html
v0.6.14/cli_reference/install/: index.html
v0.6.14/search/: search_index.json
v0.6.15/: 404.html
v0.6.15/cli_reference/download/: index.html
v0.6.16/api_reference/: index.html
v0.6.16/concepts/api_version_list/: index.html
v0.6.17/api_reference/develop_interface/: index.html
v0.6.17/cli_reference/uninstall/: index.html
v0.6.17/concepts/: index.html
v0.6.17/search/: search_index.json
v0.6.18/cli_reference/install/: index.html
v0.6.18/cli_reference/version/: index.html
v0.6.18/concepts/plugins/: index.html
v0.6.18/how_to/integration_with_semantic_release/: index.html
v0.6.18/search/: search_index.json
v0.6.19/api_reference/develop_interface/: index.html
v0.6.19/cli_reference/list/: index.html
v0.6.19/concepts/gears/: index.html
v0.6.19/home/: index.html
v0.6.19/search/: search_index.json
v0.6.2/: index.html
v0.6.20/: index.html
v0.6.20/cli_reference/: index.html
v0.6.20/getting_started/: index.html
v0.6.20/how_to/: index.html
v0.6.20/search/: search_index.json
v0.6.21/api_reference/: index.html
v0.6.4/getting_started/: index.html
v0.6.5/home/: index.html
v0.6.5/search/: search_index.json
v0.6.6/search/: search_index.json
v0.6.8/search/: search_index.json
v0.6.9/home/: index.html
(+48 files in other folders)
