[tool.poetry]
name = "qubership-git-system-follower"
version = "0.6.19"
description = "The package manager for Git providers"
authors = ["Qubership"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "git_system_follower"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.4.0"
cookiecutter = "2.7.1"
gitpython = "3.1.50"
python-gitlab = "^8.3.0"
pyyaml = "6.0.3"
requests = "2.34.2"
packaging = "26.2"
oras = "0.2.42"
pluggy = "1.6.0"
outlify = "0.10.1"

[tool.poetry.scripts]
git-system-follower = "git_system_follower.cli:cli"
gsf = "git_system_follower.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.13"
tox = "^4.54.0"
vcrpy = "^8.1.1"

mkdocs-material = "9.7.6"
mike = "2.2.0"

[tool.ruff]
line-length = 120
target-version = "py310"
output-format = "github"
exclude = [
  "tests/gears",
]

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#Optional [[tool.poetry.source]]
#Optional name = "gsf"
#Optional url = "REPLACE_WITH_CUSTOM_PYPI_REPO"